<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeatherCast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="uvi">UVI</string>
    <string name="aqi">AQI</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="minimum_ntemperature">Minimum\nTemperature</string>
    <string name="real_feels">Real Feel :</string>
    <string name="maximum_ntemperature">Maximum\nTemperature</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed_and_humidity">Wind Speed And Humidity</string>
    <string name="aqi_and_uvi">AQI and UVI</string>
    <string name="home">Home</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="weather_news">Weather News</string>
    <string name="compare">Compare Weather</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="change_language">Change Language</string>
</resources>