<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group0"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
    </group>

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/weather_forecast"
            android:icon="@drawable/navhistory"
            android:title="@string/weather_forecast" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/weather_news"
            android:icon="@drawable/navnews"
            android:title="@string/weather_news" />
        <item
            android:id="@+id/weather_compare"
            android:icon="@drawable/weatheralert"
            android:title="@string/compare" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/navsettings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/navabout"
            android:title="@string/about" />
    </group>

</menu>

