<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262833"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/countryname1"
            android:layout_width="200sp"
            android:layout_height="36sp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textwindspeed"
            app:layout_constraintEnd_toEndOf="@+id/textwindspeed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textwindspeed"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/countryname2"
            android:layout_width="200sp"
            android:layout_height="36sp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/texthumidity"
            app:layout_constraintEnd_toEndOf="@+id/texthumidity"
            app:layout_constraintStart_toStartOf="@+id/texthumidity"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/humidityrange"
            android:layout_width="200sp"
            android:layout_height="36sp"
            android:layout_marginBottom="224dp"
            android:text="@string/humidity"
            android:textAlignment="center"
            android:textColor="@color/shadeofblue1"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/texthumidity"
            app:layout_constraintEnd_toEndOf="@+id/texthumidity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/texthumidity"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/texthumidity"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginTop="380dp"
            android:background="@drawable/circle"
            android:paddingTop="47sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.838"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editcityname" />

        <EditText
        android:id="@+id/editcityname"
        android:layout_width="340sp"
        android:layout_height="40sp"
        android:alpha="0.4"
        android:background="@drawable/rounded_corner"
        android:hint="@string/enter_city_name"
        android:inputType="text"
        android:paddingLeft="10sp"
        android:textColor="@color/black"
        android:textColorHint="#A9A9A9"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/windspeed"
            android:layout_width="200sp"
            android:layout_height="36sp"
            android:layout_marginBottom="228dp"
            android:text="@string/wind_speed"
            android:textAlignment="center"
            android:textColor="@color/shadeofblue1"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textwindspeed"
            app:layout_constraintEnd_toEndOf="@+id/textwindspeed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textwindspeed"
            tools:ignore="MissingConstraints" />

        <ImageView
        android:id="@+id/search"
        android:layout_width="42sp"
        android:layout_height="40sp"
        android:alpha="0.5"
        android:background="@drawable/rounded_corner"
        app:layout_constraintBottom_toBottomOf="@+id/editcityname"
        app:layout_constraintEnd_toEndOf="@+id/editcityname"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editcityname"
        app:layout_constraintTop_toBottomOf="@+id/editcityname"
        app:layout_constraintTop_toTopOf="@+id/editcityname"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/search"/>

        <TextView
            android:id="@+id/textwindspeed"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginTop="88dp"
            android:background="@drawable/circle"
            android:paddingTop="47sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editcityname" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>